--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My first repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>This is header</h1>
     <h2>This is header 2</h2>
+
 </body>
 </html>
