--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2>This is header 2</h2>
     <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil dignissimos consequuntur, architecto quas quia repudiandae dolor non error. Vitae, architecto asperiores laborum ipsam, totam numquam magnam ducimus minus molestias, voluptatum minima natus. Voluptate vel facere delectus est. Sit in quis quae, labore laudantium soluta veniam est quasi fuga modi corporis autem dolores ipsum eius, debitis non alias pariatur quisquam ducimus deleniti vero maxime! Ad odio optio neque corporis eos recusandae ratione laboriosam voluptatum, quis soluta perferendis accusantium error repellat quo ducimus. Quas dolorum delectus, eligendi sint placeat iusto commodi similique laborum, error quibusdam esse. Culpa fugit delectus exercitationem sapiente iure.
     </P>
+    <h1>This is branch Razu's text</h1>
 
 </body>
 </html>
